# aeroclub_recsys_2025

./: .gitignore  README.md  RelativeCostFeatures.ipynb  aeroclub_recsys.ipynb  customer_approach.ipynb  customers.ipynb  dual_model_approach.ipynb  eda_save.ipynb  pyproject.toml  requirements.txt  route_popularity.ipynb  segment_models.ipynb
src/: cluster_cust_data.py  constants.py  cust_feature_eng.py  flt_feature_eng.py  ranking.py  ranking_eval.py  utils.py
