[project]
name = "aeroclub-recsys-2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "polars==1.32.2",
    "pyarrow==21.0.0",
    "scikit-learn==1.7.1",
]
